# resources/model_initiative_tag_add.go
@@ -1,158 +1,0 @@
-/*
-test
-
-example
-
-API version: 0.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the InitiativeTagAdd type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &InitiativeTagAdd{}
-
-// InitiativeTagAdd struct for InitiativeTagAdd
-type InitiativeTagAdd struct {
-	Data InitiativeTagAddData `json:"data"`
-}
-
-type _InitiativeTagAdd InitiativeTagAdd
-
-// NewInitiativeTagAdd instantiates a new InitiativeTagAdd object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewInitiativeTagAdd(data InitiativeTagAddData) *InitiativeTagAdd {
-	this := InitiativeTagAdd{}
-	this.Data = data
-	return &this
-}
-
-// NewInitiativeTagAddWithDefaults instantiates a new InitiativeTagAdd object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewInitiativeTagAddWithDefaults() *InitiativeTagAdd {
-	this := InitiativeTagAdd{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *InitiativeTagAdd) GetData() InitiativeTagAddData {
-	if o == nil {
-		var ret InitiativeTagAddData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *InitiativeTagAdd) GetDataOk() (*InitiativeTagAddData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *InitiativeTagAdd) SetData(v InitiativeTagAddData) {
-	o.Data = v
-}
-
-func (o InitiativeTagAdd) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o InitiativeTagAdd) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *InitiativeTagAdd) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varInitiativeTagAdd := _InitiativeTagAdd{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varInitiativeTagAdd)
-
-	if err != nil {
-		return err
-	}
-
-	*o = InitiativeTagAdd(varInitiativeTagAdd)
-
-	return err
-}
-
-type NullableInitiativeTagAdd struct {
-	value *InitiativeTagAdd
-	isSet bool
-}
-
-func (v NullableInitiativeTagAdd) Get() *InitiativeTagAdd {
-	return v.value
-}
-
-func (v *NullableInitiativeTagAdd) Set(val *InitiativeTagAdd) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableInitiativeTagAdd) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableInitiativeTagAdd) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableInitiativeTagAdd(val *InitiativeTagAdd) *NullableInitiativeTagAdd {
-	return &NullableInitiativeTagAdd{value: val, isSet: true}
-}
-
-func (v NullableInitiativeTagAdd) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableInitiativeTagAdd) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
