# resources/model_initiative_tag_add_data.go
@@ -1,215 +1,0 @@
-/*
-test
-
-example
-
-API version: 0.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the InitiativeTagAddData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &InitiativeTagAddData{}
-
-// InitiativeTagAddData struct for InitiativeTagAddData
-type InitiativeTagAddData struct {
-	// initiative_id
-	Id string `json:"id"`
-	Type string `json:"type"`
-	Attributes InitiativeTagData `json:"attributes"`
-}
-
-type _InitiativeTagAddData InitiativeTagAddData
-
-// NewInitiativeTagAddData instantiates a new InitiativeTagAddData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewInitiativeTagAddData(id string, type_ string, attributes InitiativeTagData) *InitiativeTagAddData {
-	this := InitiativeTagAddData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewInitiativeTagAddDataWithDefaults instantiates a new InitiativeTagAddData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewInitiativeTagAddDataWithDefaults() *InitiativeTagAddData {
-	this := InitiativeTagAddData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *InitiativeTagAddData) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *InitiativeTagAddData) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *InitiativeTagAddData) SetId(v string) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *InitiativeTagAddData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *InitiativeTagAddData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *InitiativeTagAddData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *InitiativeTagAddData) GetAttributes() InitiativeTagData {
-	if o == nil {
-		var ret InitiativeTagData
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *InitiativeTagAddData) GetAttributesOk() (*InitiativeTagData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *InitiativeTagAddData) SetAttributes(v InitiativeTagData) {
-	o.Attributes = v
-}
-
-func (o InitiativeTagAddData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o InitiativeTagAddData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *InitiativeTagAddData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varInitiativeTagAddData := _InitiativeTagAddData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varInitiativeTagAddData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = InitiativeTagAddData(varInitiativeTagAddData)
-
-	return err
-}
-
-type NullableInitiativeTagAddData struct {
-	value *InitiativeTagAddData
-	isSet bool
-}
-
-func (v NullableInitiativeTagAddData) Get() *InitiativeTagAddData {
-	return v.value
-}
-
-func (v *NullableInitiativeTagAddData) Set(val *InitiativeTagAddData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableInitiativeTagAddData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableInitiativeTagAddData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableInitiativeTagAddData(val *InitiativeTagAddData) *NullableInitiativeTagAddData {
-	return &NullableInitiativeTagAddData{value: val, isSet: true}
-}
-
-func (v NullableInitiativeTagAddData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableInitiativeTagAddData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
