# resources/model_links_direct_data.go
@@ -1,0 +1,188 @@
+/*
+test
+
+example
+
+API version: 0.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the LinksDirectData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &LinksDirectData{}
+
+// LinksDirectData struct for LinksDirectData
+type LinksDirectData struct {
+	// resources id
+	Id string `json:"id"`
+	// resources type
+	Type string `json:"type"`
+}
+
+type _LinksDirectData LinksDirectData
+
+// NewLinksDirectData instantiates a new LinksDirectData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewLinksDirectData(id string, type_ string) *LinksDirectData {
+	this := LinksDirectData{}
+	this.Id = id
+	this.Type = type_
+	return &this
+}
+
+// NewLinksDirectDataWithDefaults instantiates a new LinksDirectData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewLinksDirectDataWithDefaults() *LinksDirectData {
+	this := LinksDirectData{}
+	return &this
+}
+
+// GetId returns the Id field value
+func (o *LinksDirectData) GetId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value
+// and a boolean to check if the value has been set.
+func (o *LinksDirectData) GetIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Id, true
+}
+
+// SetId sets field value
+func (o *LinksDirectData) SetId(v string) {
+	o.Id = v
+}
+
+// GetType returns the Type field value
+func (o *LinksDirectData) GetType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Type
+}
+
+// GetTypeOk returns a tuple with the Type field value
+// and a boolean to check if the value has been set.
+func (o *LinksDirectData) GetTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Type, true
+}
+
+// SetType sets field value
+func (o *LinksDirectData) SetType(v string) {
+	o.Type = v
+}
+
+func (o LinksDirectData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o LinksDirectData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["id"] = o.Id
+	toSerialize["type"] = o.Type
+	return toSerialize, nil
+}
+
+func (o *LinksDirectData) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"id",
+		"type",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varLinksDirectData := _LinksDirectData{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varLinksDirectData)
+
+	if err != nil {
+		return err
+	}
+
+	*o = LinksDirectData(varLinksDirectData)
+
+	return err
+}
+
+type NullableLinksDirectData struct {
+	value *LinksDirectData
+	isSet bool
+}
+
+func (v NullableLinksDirectData) Get() *LinksDirectData {
+	return v.value
+}
+
+func (v *NullableLinksDirectData) Set(val *LinksDirectData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableLinksDirectData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableLinksDirectData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableLinksDirectData(val *LinksDirectData) *NullableLinksDirectData {
+	return &NullableLinksDirectData{value: val, isSet: true}
+}
+
+func (v NullableLinksDirectData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableLinksDirectData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
