# resources/model_point_create_data.go
@@ -21,8 +21,6 @@ var _ MappedNullable = &PointCreateData{}
 
 // PointCreateData struct for PointCreateData
 type PointCreateData struct {
-	// point id
-	Id string `json:"id"`
 	Type string `json:"type"`
 	Attributes PointCreateDataAttributes `json:"attributes"`
 }
@@ -33,9 +31,8 @@ type _PointCreateData PointCreateData
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewPointCreateData(id string, type_ string, attributes PointCreateDataAttributes) *PointCreateData {
+func NewPointCreateData(type_ string, attributes PointCreateDataAttributes) *PointCreateData {
 	this := PointCreateData{}
-	this.Id = id
 	this.Type = type_
 	this.Attributes = attributes
 	return &this
@@ -47,30 +44,6 @@ func NewPointCreateData(id string, type_ string, attributes PointCreateDataAttri
 func NewPointCreateDataWithDefaults() *PointCreateData {
 	this := PointCreateData{}
 	return &this
-}
-
-// GetId returns the Id field value
-func (o *PointCreateData) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *PointCreateData) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *PointCreateData) SetId(v string) {
-	o.Id = v
 }
 
 // GetType returns the Type field value
@@ -131,7 +104,6 @@ func (o PointCreateData) MarshalJSON() ([]byte, error) {
 
 func (o PointCreateData) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
 	toSerialize["type"] = o.Type
 	toSerialize["attributes"] = o.Attributes
 	return toSerialize, nil
@@ -142,7 +114,6 @@ func (o *PointCreateData) UnmarshalJSON(data []byte) (err error) {
 	// by unmarshalling the object into a generic map with string keys and checking
 	// that every required field exists as a key in the generic map.
 	requiredProperties := []string{
-		"id",
 		"type",
 		"attributes",
 	}
